--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,12 @@
-name=DINO PLC
-version=1.0.6
+name=DINO-PLC
+version=1.0.0
 author=DINO Corp.
 maintainer=DINO Corp.
 sentence=This library providing the possibility to call a function at specific ESP32 module.This library support DINO PLC 
 paragraph=Present library defines a 'DINO PLC'
 category=Device Control
-url=https://github.com/suratin27/DINO_PLC
+url=https://github.com/Dino-MLC-Board/DINO-PLC
 architectures=*
 includes=DINO_PLC.h
+depends=ArduinoJson,StreamUtils,ESP32Time,PubSubClient
 precompiled=true
